// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Search filters options 1`] = `
"<div class=\\"_trigger_14e8f2\\">
  <div class=\\"_Field_58119b _button_58119b\\">
    <div class=\\"_inner_58119b\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4\\" style=\\"--text-rgb: var(--dodo-rgb-foreground);\\"><!--v-if-->Option 0</span><input style=\\"position: fixed; pointer-events: none; opacity: 0;\\"></div><span class=\\"_Icon_7d4484 material-symbols-outlined\\">arrow_drop_down</span>
  </div>
</div>
<teleport-stub to=\\"body\\">
  <div class=\\"_Dropdown_14e8f2\\" style=\\"min-width: 0px; left: 0px; max-width: 76px; top: 1px; max-height: 75px;\\">
    <div class=\\"_Column_4081ed _content_14e8f2\\" style=\\"gap: var(--dodo-gap-0);\\">
      <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); min-height: 0;\\">
        <div class=\\"_Row_26c80b _searchbox_7b9989\\">
          <div class=\\"_Field_58119b _TextInput_4e8ed8\\" tabindex=\\"0\\" style=\\"flex-grow: 1;\\">
            <div class=\\"_inner_58119b\\"><input class=\\"_input_4e8ed8\\" placeholder=\\"Search\\" type=\\"search\\"></div>
          </div>
        </div>
        <div class=\\"_ScrollContainer_fa8ff5\\" style=\\"\\">
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 2</span>
              <!--v-if-->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</teleport-stub>"
`;

exports[`Search input visible after character key press 1`] = `
"<div class=\\"_trigger_14e8f2\\">
  <div class=\\"_Field_58119b _button_58119b\\">
    <div class=\\"_inner_58119b\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4\\" style=\\"--text-rgb: var(--dodo-rgb-foreground);\\"><!--v-if-->Option 0</span><input style=\\"position: fixed; pointer-events: none; opacity: 0;\\"></div><span class=\\"_Icon_7d4484 material-symbols-outlined\\">arrow_drop_down</span>
  </div>
</div>
<teleport-stub to=\\"body\\">
  <div class=\\"_Dropdown_14e8f2\\" style=\\"min-width: 0px; left: 0px; max-width: 76px; top: 1px; max-height: 75px;\\">
    <div class=\\"_Column_4081ed _content_14e8f2\\" style=\\"gap: var(--dodo-gap-0);\\">
      <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); min-height: 0;\\">
        <div class=\\"_Row_26c80b _searchbox_7b9989\\" style=\\"\\">
          <div class=\\"_Field_58119b _TextInput_4e8ed8\\" tabindex=\\"0\\" style=\\"flex-grow: 1;\\">
            <div class=\\"_inner_58119b\\"><input class=\\"_input_4e8ed8\\" placeholder=\\"Search\\" type=\\"search\\"></div>
          </div>
        </div>
        <div class=\\"_ScrollContainer_fa8ff5\\" style=\\"\\"></div>
      </div>
    </div>
  </div>
</teleport-stub>"
`;

exports[`Search input visible if many options 1`] = `
"<div class=\\"_trigger_14e8f2\\">
  <div class=\\"_Field_58119b _button_58119b\\">
    <div class=\\"_inner_58119b\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4\\" style=\\"--text-rgb: var(--dodo-rgb-foreground);\\"><!--v-if-->Option 0</span><input style=\\"position: fixed; pointer-events: none; opacity: 0;\\"></div><span class=\\"_Icon_7d4484 material-symbols-outlined\\">arrow_drop_down</span>
  </div>
</div>
<teleport-stub to=\\"body\\">
  <div class=\\"_Dropdown_14e8f2\\" style=\\"min-width: 0px; left: 0px; max-width: 76px; top: 1px; max-height: 75px;\\">
    <div class=\\"_Column_4081ed _content_14e8f2\\" style=\\"gap: var(--dodo-gap-0);\\">
      <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); min-height: 0;\\">
        <div class=\\"_Row_26c80b _searchbox_7b9989\\">
          <div class=\\"_Field_58119b _TextInput_4e8ed8\\" tabindex=\\"0\\" style=\\"flex-grow: 1;\\">
            <div class=\\"_inner_58119b\\"><input class=\\"_input_4e8ed8\\" placeholder=\\"Search\\" type=\\"search\\"></div>
          </div>
        </div>
        <div class=\\"_ScrollContainer_fa8ff5\\" style=\\"\\">
          <!--v-if-->
          <div data-selectactive=\\"true\\" class=\\"_DropdownItem_ccf7d9 _active_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 0</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 1</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 2</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 3</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 4</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 5</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 6</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 7</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 8</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 9</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 10</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 11</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 12</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 13</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 14</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 15</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 16</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 17</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 18</span>
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <div class=\\"_DropdownItem_ccf7d9\\">
            <div class=\\"_Column_4081ed\\" style=\\"gap: var(--dodo-gap-0); flex: 1;\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4 _text_ccf7d9\\"><!-- @slot Customize option html -->Option 19</span>
              <!--v-if-->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</teleport-stub>"
`;

exports[`Select a value 1`] = `
"<div class=\\"_trigger_14e8f2\\">
  <div class=\\"_Field_58119b _button_58119b\\">
    <div class=\\"_inner_58119b\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4\\" style=\\"--text-rgb: var(--dodo-rgb-foreground);\\"><!--v-if-->Option 0</span><input style=\\"position: fixed; pointer-events: none; opacity: 0;\\"></div><span class=\\"_Icon_7d4484 material-symbols-outlined\\">arrow_drop_down</span>
  </div>
</div>
<teleport-stub to=\\"body\\">
  <!--v-if-->
</teleport-stub>"
`;

exports[`Select can be disabled 1`] = `
"<div class=\\"_trigger_14e8f2 _disabled_14e8f2\\">
  <div class=\\"_Field_58119b _disabled_58119b _button_58119b\\">
    <div class=\\"_inner_58119b\\"><span class=\\"_text_9554f4 _span_9554f4 _nowrap_9554f4\\" style=\\"--text-rgb: var(--dodo-rgb-foreground);\\"><!--v-if-->Option 0</span><input style=\\"position: fixed; pointer-events: none; opacity: 0;\\" disabled=\\"\\"></div><span class=\\"_Icon_7d4484 material-symbols-outlined\\">arrow_drop_down</span>
  </div>
</div>
<teleport-stub to=\\"body\\">
  <!--v-if-->
</teleport-stub>"
`;
